MagneticCraftingBlock, OxygenCollectorBlock base and small changes